fixed the horizontal scroll and alignment of header text on main-img-text-box

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -141,10 +141,10 @@ header {
 
 .main-img-text-box {
     position: absolute;
-    width: 1140px;
+    width: 500px;
     top: 50%;
     left: 50%;
-    transform: translate(-15%, -15%); /* translates the element half of it's width and height up and to the left */ 
+    transform: translate(-25%, -25%); /* translates the element half of it's width and height up and to the left */ 
 }
 
 .logo {
